added help html for popup

--- a/frontend/popup.html
+++ b/frontend/popup.html
@@ -20,6 +20,7 @@
   <div class="tabs">
     <div id="tab-resume" class="tab active">Resume</div>
     <div id="tab-analyze" class="tab">Analyze</div>
+    <div id="tab-help" class="tab">Help</div>
   </div>
 
   <div id="panel-resume" class="panel active">
@@ -51,6 +52,19 @@
       <pre id="result">No result yet.</pre>
     </div>
   </div>
+
+  <div id="panel-help" class="panel">
+  <div class="row">
+    <h4>How to Use</h1>
+    <p>This extension compares a resume and job description. It returns the similarity score and key words between the two. </p>
+    <p>1. Paste in your resume in the text box as text, or upload it as a .txt file on the 'Resume' tab on the top left. You are able to save either the file or text through the appropriate save button on the 'Resume' tab as well.</p>
+    <p>2. Now head over to a job description of interest  (Note that the extension only works with Indeed.com as of now). From here, you can either copy and paste the
+      job text into the text box on the 'Analyze' tab, or you can use the extension to gather the job description data for you by pressing the 'Extract Job Text and Analyze Tab'.
+    </p>
+    <p>After clicking the respective button, you should see in the text box under 'API response' the similariy score between your resume and job description.</p>
+   
+  </div>
+</div>
 
   <script src="content.js"></script>
 </body>
